--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,25 @@
     <string name="app_name">myBudget</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">myBudget</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="breakdown_CostBreakdown">Cost Breakdown</string>
+    <string name="breakdown_tapInfo">Manage purchases</string>
+    <string name="AddTransaction">Add Transaction</string>
+    <string name="dialogDiscard">Discard transaction?</string>
+    <string name="dialogPositive">Yes</string>
+    <string name="dialogNegative">No</string>
+    <string name="action_add">Add</string>
+    <string name="AddBudget">Add money</string>
+    <string name="RemoveBudget">Purchase or credit</string>
+    <string name="TransactionCategory">Transaction category</string>
+    <string name="TransactionType">Transaction type</string>
+    <string name="TransactionDescription">Transaction description</string>
+    <string name="TransactionAmount">Transaction amount</string>
 </resources>
